--- a/WindowsFormsApp1/WindowsFormsApp1/Form1.resx
+++ b/WindowsFormsApp1/WindowsFormsApp1/Form1.resx
@@ -117,4 +117,87 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="timerClock.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="timerAlert.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>152, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAACsAAADaAAAA2gAAACsAAAAAAAAAAAAAAAAAAAABAAAAGgAAAFsAAACiAAAA1AAA
+        APEAAAD9AAAA/QAAAPEAAADVAAAAowAAAF0AAAAbAAAAAQAAAAAAAAAAAAAAAAAAACsAAADaAAAA2gAA
+        ACsAAAAAAAAAAAAAAAAAAAAAAAAAVQAAAP0AAAD+AAAAYAAAAAAAAAAAAAAAGgAAAHYAAADPAAAA+AAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA+AAAANAAAAB3AAAAGwAAAAAAAAAAAAAAYQAA
+        AP4AAAD9AAAAVQAAAAAAAAAAAAAAAAAAAAAAAAA+AAAA8wAAAP8AAAC9AAAANAAAAFIAAADMAAAA/QAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP4AAADNAAAAUwAA
+        ADQAAAC+AAAA/wAAAPMAAAA+AAAAAAAAAAAAAAAAAAAAAAAAAA0AAAC0AAAA/wAAAP4AAADtAAAA8wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADzAAAA7QAAAP4AAAD/AAAAtAAAAA0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACwAAADAAAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAMEAAAAsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAA
+        AH4AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAfgAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAA/AAAA6AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADoAAAAPwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAADgAAALUAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAC1AAAADgAA
+        AAAAAAAAAAAAAAAAAAAAAABUAAAA9wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        APcAAABUAAAAAAAAAAAAAAAAAAAABgAAAKwAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAKwAAAAGAAAAAAAAAAAAAAAnAAAA5AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPoAAADBAAAAwgAAAPsAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA5AAAACcAAAAAAAAAAAAAAFUAAAD8AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD7AAAAlAAAABAAAAATAAAAwgAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD8AAAAVQAAAAAAAAAAAAAAfgAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA+wAAAJMAAAAOAAAAAAAA
+        ABEAAADBAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAB9AAAAAAAAAAAAAACXAAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPsAAACTAAAADgAA
+        AAAAAAAOAAAAkwAAAPwAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAJcAAAAAAAAAAQAA
+        AKIAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD8AAAAlAAA
+        AA4AAAAAAAAADgAAAJMAAAD7AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAoQAA
+        AAEAAAAAAAAAnQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AMIAAAASAAAAAAAAAA4AAACTAAAA+wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAACdAAAAAAAAAAAAAACJAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAApQAAAAEAAAAAAAAAfAAAAPwAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAIkAAAAAAAAAAAAAAGYAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAACkAAAAAQAAAAEAAAClAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAZQAAAAAAAAAAAAAAOAAAAPAAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAKUAAAABAAAAAQAAAKUAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPAAAAA4AAAAAAAAAAAAAAAQAAAAxQAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAApQAAAAEAAAABAAAApQAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAxQAAABAAAAAAAAAAAAAAAAAAAAB2AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAClAAAAAQAAAAEAAAClAAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAB2AAAAAAAAAAAAAAAAAAAAAAAA
+        ACEAAADXAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAKQAAAABAAAAAQAA
+        AKQAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA1wAAACEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAGsAAAD6AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAApwAA
+        AAIAAAACAAAAqAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPoAAABrAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAADQAAAKYAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADZAAAAPwAAAD8AAADZAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAApgAA
+        AA0AAAAAAAAAAAAAAAAAAAAsAAAATAAAABIAAAAAAAAAIAAAAL8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAADuAAAA7gAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AL8AAAAgAAAAAAAAABIAAABMAAAALAAAANkAAAD8AAAAfgAAAAAAAAAAAAAAJgAAALoAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAC6AAAAJgAAAAAAAAAAAAAAfwAAAPwAAADZAAAA9wAAAP8AAAC0AAAABgAAAAAAAAAAAAAAGgAA
+        AJUAAAD0AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD0AAAAlgAAABoAAAAAAAAAAAAAAAYAAAC0AAAA/wAAAPcAAADRAAAA/wAAAOYAAAAzAAAAAAAA
+        AAAAAAAAAAAABwAAAFAAAAC9AAAA9wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD3AAAAvgAAAFAAAAAHAAAAAAAAAAAAAAAAAAAAMwAAAOYAAAD/AAAA0QAAAHcAAAD6AAAA/wAA
+        AL4AAAAyAAAABQAAAAAAAAAAAAAAAAAAAA8AAABMAAAAmQAAANAAAADtAAAA+gAAAP8AAAD/AAAA+gAA
+        AO0AAADQAAAAmQAAAEwAAAAPAAAAAAAAAAAAAAAAAAAABQAAADIAAAC+AAAA/wAAAPoAAAB3AAAAFQAA
+        ALQAAAD/AAAA/wAAAOUAAACzAAAAmQAAADUAAAAAAAAAAAAAAAAAAAACAAAAFAAAAC0AAACGAAAA/gAA
+        AP4AAACGAAAALQAAABQAAAACAAAAAAAAAAAAAAAAAAAANQAAAJkAAACzAAAA5QAAAP8AAAD/AAAAtAAA
+        ABUAAAAAAAAAJQAAALQAAAD7AAAA/wAAAP8AAAD/AAAAngAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AFcAAAD9AAAA/QAAAFcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAACeAAAA/wAAAP8AAAD/AAAA+wAA
+        ALQAAAAlAAAAAAAAAAAAAAAAAAAAFgAAAHgAAADSAAAA+QAAAPgAAABuAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAKwAAANoAAADaAAAAKwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG4AAAD4AAAA+QAA
+        ANMAAAB4AAAAFgAAAAAAAAAAw4ABw8MAAMPAAAADwAAAA+AAAAfgAAAH4AAAB8AAAAPAAAADgAAAAYAA
+        AAGAAAABgAAQAYAAIAEAAEAAAACAAYAAgAGAAAABgAAAAYAAAAHAAAADwAAAA+AAAAfgAAAHEAAACBgA
+        ABgMAAAwDgAAcAGAAYAA4AcAgHw+AcD8PwM=
+</value>
+  </data>
 </root>
